# spout2-dx-prototype

./: .gitignore  Cargo.toml  LICENSE.md  build.rs
include/: Spout.h
libs/: SpoutDX.lib
src/: app.rs  com.rs  item.rs  main.rs  shader.frag  shader.vert  texture_loader.rs
src/dx/: buffer.rs  device.rs  error.rs  mod.rs  sampler.rs  shader.rs  texture.rs
src/shaders/: vertex_shader.hlsl
src/spout/: mod.rs
