[package]
name = "vtftk-spout"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
autocxx = "0.27.1"
cxx = "1.0"
anyhow = "1.0.95"

nalgebra = "0.33.2"
image = "0.25.5"
rand = "0.8.5"
vtubestudio = "0.9.0"

[dependencies.windows]
version = "0.59.0"
features = [
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Dxgi_Common",
]


[build-dependencies]
autocxx-build = "0.27.1"
miette = { version = "5", features = ["fancy"] }
cc = "1.2.10"
